    dump the db and display consolidation state for now, but will grow more
    features later. Ship it in apport-retrace.
  * apport/crashdb.py, duplicate_db_last_consolidation(): Fix timedelta
    seconds calculation to actually take the days into account, too.
  * bin/crash-digger: Fix dumping of dup db after consolidation.

  Merge the fedora branch, thanks a lot to Will Woods wwoods@redhat.com>:

  * Add apport.init.fedora: Fedora specific init script.
  * Add apport.spec: RPM build recipe.
  * Add backends/packaging_rpm.py: Partial implementation of the packaging
    backend for RPM which applies to all RPM-based distros.
  * Add backends/packaging_fedora.py: Concrete packaging backend
    implementation for Fedora.
  * apport/elfcore.py: Classes for parsing general ELF files, and information
    from core dumps.
  * bin/apport: Fall back to reading signal number and PID directly from the
    core file (via elfcore.py) if CORE_SIGNAL and CORE_PID are not defined (i.
    e. when running on a non-Ubuntu kernel).
  * crashdb.conf: Add stanzas for Fedora and a 'debug' database which uses the
    'memory' crashdb implementation.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 13 Jul 2007 18:49:24 +0100

apport (0.90) gutsy; urgency=low

  * apport/ui.py, load_report(): Catch IOError, too. LP: #118827
  * Merge apport-cli package into apport itself. The program itself is just 3
    kB compressed, and it's not worth wasting another 34 kB compressed
    changelog for this tiny bit.
  * apport/report.py, obsolete_packages(): Use the version comparison from the
    packaging system instead of just testing for inequality. This catches zero
    epochs. Thanks to Will Woods <wwoods@redhat.com>!
  * apport/ui.py: Add option -c/--crash-file to run the UI with a particular
    crash file (which can be anywhere) instead of all pending crashes in
    /var/crash/.
  * Add xdg-mime/apport.xml: XDG MIME type definition for .crash files.