@@ -18,6 +18,11 @@ apport (0.91) UNRELEASED; urgency=low
   * apport/crashdb.py, duplicate_db_last_consolidation(): Fix timedelta
     seconds calculation to actually take the days into account, too.
   * bin/crash-digger: Fix dumping of dup db after consolidation.
+  * apport/ui.py:
+    - test_run_report_bug_package(): Add test case for calling the UI in bug
+      filing mode with an invalid package name.
+    - run_report_bug(): Do not crash on invalid package name, generate an
+      error message instead. (LP: #123644)
 
   Merge the fedora branch, thanks a lot to Will Woods wwoods@redhat.com>:
 
@@ -35,7 +40,7 @@ apport (0.91) UNRELEASED; urgency=low
   * crashdb.conf: Add stanzas for Fedora and a 'debug' database which uses the
     'memory' crashdb implementation.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 13 Jul 2007 18:49:24 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 14 Jul 2007 11:31:05 +0100
 
 apport (0.90) gutsy; urgency=low
 
